--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -89,16 +89,47 @@
     visibility: hidden;
 }
 
-.delete_button {
+/*.delete_button {
     position: relative;
-    z-index: 100000;
-    min-height: 30px;
-    max-height: 30px;
-    min-width: 30px;
-    max-width: 30px;
-    background-size: 30px;
+    z-index: 100;
+    min-height: 40px;
+    max-height: 40px;
+    min-width: 40px;
+    max-width: 40px;
+    background-size: 40px;
     background-repeat: none;
     background-image: url("https://img.icons8.com/flat_round/64/000000/delete-sign.png");
+}
+*/
+
+.delete_button {
+    position: relative;
+    height: 0;
+    width: 0;
+}
+
+.delete_button > div {
+    position: relative;
+    z-index: 100;
+    display: block;
+    top: 10%;
+    right: 10%;
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+    background-color: #FF5353;
+}
+
+.delete_button > div::before {
+    content: "";
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 4px;
+    top: calc(50% - 3px);
+    left: calc(50% - 12px);
+
+    background-color: white;
 }
 
 @media screen and (max-height: 670px) {
