--- a/src/panels/stickershop/fragments/ModalStickerCreation.module.css
+++ b/src/panels/stickershop/fragments/ModalStickerCreation.module.css
@@ -127,10 +127,15 @@
 
 .input_button:hover {
     background-color: #4986CC;
+    color: #ffffff;
 }
 
 .input_label {
     font-size: 20px;
+}
+
+.cost_input {
+    max-height: 10px;
 }
 
 .input_file {
