--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -89,19 +89,6 @@
     visibility: hidden;
 }
 
-/*.delete_button {
-    position: relative;
-    z-index: 100;
-    min-height: 40px;
-    max-height: 40px;
-    min-width: 40px;
-    max-width: 40px;
-    background-size: 40px;
-    background-repeat: none;
-    background-image: url("https://img.icons8.com/flat_round/64/000000/delete-sign.png");
-}
-*/
-
 .delete_button {
     position: relative;
     height: 0;
@@ -113,7 +100,7 @@
     z-index: 100;
     display: block;
     top: 10%;
-    right: 10%;
+    left: 10%;
     height: 40px;
     width: 40px;
     border-radius: 40px;
