--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -66,6 +66,7 @@
     margin: 10px;
     border-radius: 25px;
     background-color: white;
+    box-shadow: 0 6px 17px rgba(0, 0, 0, 0.1);
 }
 
 .content {
