--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -100,7 +100,7 @@
     z-index: 100;
     display: block;
     top: 10%;
-    left: 10%;
+    left: 67vw;
     height: 40px;
     width: 40px;
     border-radius: 40px;
