saving sticker without uploading image now deprecated

--- a/src/panels/stickershop/fragments/ModalStickerCreation.module.css
+++ b/src/panels/stickershop/fragments/ModalStickerCreation.module.css
@@ -72,12 +72,12 @@
     border-radius: 25px;
     border: 1px solid #4986CC;
 
-    background-color: white;
+    background-color: #ffffff;
 }
 
 .save_button:active {
     background-color: #2D5BB9;
-    color: white;
+    color: #ffffff;
 }
 
 .save_button:hover, .save_button:focus {
@@ -144,4 +144,15 @@
 
 .filename {
 
+}
+
+.btnWarning {
+    background-color: #ff0000;
+    outline: none;
+    color: #ffffff;
+    border: 0;
+}
+
+.warningText {
+    color: red;
 }
