Preview img size fixed on StickerCreation

--- a/src/panels/stickershop/fragments/ModalStickerCreation.module.css
+++ b/src/panels/stickershop/fragments/ModalStickerCreation.module.css
@@ -86,14 +86,17 @@
     justify-content: center;
     align-items: center;
     margin: 20px auto;
-    border-radius: 25px;
+    padding: 5px;
+    border-radius: 5px;
     background: #F2F2F2;
 }
 
 .preview_logo {
     display: flex;
-    width: 200px;
-    height: 200px;
+    max-width: 200px;
+    max-height: 200px;
+    min-height: 40px;
+    min-width: 40px;
 }
 
 .input_frame {
