--- a/src/common/components/backheader/BackHeader.module.css
+++ b/src/common/components/backheader/BackHeader.module.css
@@ -1,6 +1,6 @@
 .header {
     border-radius: 0 0 25px 25px;
-    height: 80px;
+    height: calc(60px + env(safe-area-inset-top));
     width: 100%;
     background-color: #5E80FF;
 }
@@ -15,7 +15,7 @@
     position: relative;
     background-size: contain;
     left: 20px;
-    top: 40%;
+    top: calc(12px + env(safe-area-inset-top));
 }
 
 .exit_button:focus {
