--- a/src/panels/admin/questioncreation/fragments/ModalAnswersCreation.module.css
+++ b/src/panels/admin/questioncreation/fragments/ModalAnswersCreation.module.css
@@ -18,7 +18,7 @@
 .back_button {
     position: -webkit-sticky;
     position: sticky;
-    top: 25px;
+    top: calc(env(safe-area-inset-top) + 5px);
     margin-left: 25px;
     pointer-events: inherit;
 }
@@ -28,6 +28,7 @@
     height: min-content;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .input_title {
