--- a/src/panels/result/Result.module.css
+++ b/src/panels/result/Result.module.css
@@ -35,7 +35,7 @@
 
     position: absolute;
     z-index: -1;
-    top: 7.5vh;
+    top: calc(7.5vh);
     left: 6.4vw;
 
     background: radial-gradient(50% 50% at 50% 50%, #2E6AE7 0%, #6597FE 95.56%);
