--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -1,3 +1,4 @@
+
 .container {
     height: 100%;
     width: 100%;
@@ -94,6 +95,7 @@
     overflow: scroll;
     scroll-snap-type: x mandatory;
     touch-action: manipulation;
+    margin-bottom: calc(env(safe-area-inset-bottom) + 30px);
 
 }
 
