copy text vertically centered

--- a/src/panels/main/Profile/fragments/AboutWindow.module.css
+++ b/src/panels/main/Profile/fragments/AboutWindow.module.css
@@ -8,11 +8,12 @@
 }
 
 .copy_warning {
-    height: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6vh;
     width: 69vw;
     margin: 10vh auto 0;
-    text-align: center;
-    padding-top: 8px;
     color: white;
 
     background: #5D80FF;
